.provarCaches/00D6C0000000xA6UAI/objects/sked__Resource_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>sked__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Duration__c</fullName>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Job_Allocation_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Job Allocation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Job_Allocation_Time_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Allocation Time Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Job_Status__c</fullName>
        <description>Internal Skedulo use only. Do not modify the default Picklist values.</description>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Pending Allocation</fullName>
                </value>
                <value>
                    <fullName>Pending Dispatch</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>En Route</fullName>
                </value>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Job__c</fullName>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Resource Requirements</relationshipLabel>
        <relationshipName>Resource_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Relative_Start__c</fullName>
        <description>Relative Start in minutes</description>
        <label>Relative Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Scheduled_End1__c</fullName>
        <formula>sked__Scheduled_Start1__c + BLANKVALUE( sked__Duration__c, sked__Job__r.sked__Duration__c ) / 1440</formula>
        <label>Scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Scheduled_End__c</fullName>
        <label>Scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Scheduled_Start1__c</fullName>
        <formula>sked__Job__r.sked__Start__c  +  sked__Relative_Start__c  / 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Scheduled_Start__c</fullName>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <label>Resource Requirement</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Resource Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__EndTimeNotAfterJobFinish</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNULL( sked__Scheduled_End1__c ) ) , NOT( ISNULL( sked__Job__r.sked__Finish__c ) ), sked__Scheduled_End1__c &gt; sked__Job__r.sked__Finish__c )</errorConditionFormula>
        <errorMessage>End time cannot be after job end time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__QuantityGreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Quantity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>sked__Quantity__c</errorDisplayField>
        <errorMessage>Quantity must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__RelativeStartNullIfTimeSourceFalse</fullName>
        <active>true</active>
        <errorConditionFormula>AND( sked__Job_Allocation_Time_Source__c = false, NOT( ISNULL( sked__Relative_Start__c ) ) )</errorConditionFormula>
        <errorDisplayField>sked__Relative_Start__c</errorDisplayField>
        <errorMessage>Relative Start must be null if Job Allocation Time Source is false</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__StartTimeNotBeforeJobStart</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNULL( sked__Scheduled_Start1__c ) ) , NOT( ISNULL( sked__Job__r.sked__Start__c ) ), sked__Scheduled_Start1__c &lt; sked__Job__r.sked__Start__c )</errorConditionFormula>
        <errorMessage>Start time cannot be before job start time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__TimeSourceMustHaveDuration</fullName>
        <active>true</active>
        <errorConditionFormula>AND( sked__Job_Allocation_Time_Source__c  = true , ISNULL( sked__Duration__c ) )</errorConditionFormula>
        <errorDisplayField>sked__Duration__c</errorDisplayField>
        <errorMessage>Duration must be set if Job Allocation Time Source is true</errorMessage>
    </validationRules>
</CustomObject>